# flyft

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
cmake/: FindFFTW3.cmake
include/flyft/: bmcsl_hard_sphere_functional.h  boublik_hard_sphere_functional.h  boundary_type.h  brownian_diffusive_flux.h  cartesian_mesh.h  communicator.h  complex_field.h  composite_external_potential.h  composite_flux.h  composite_functional.h  composite_mixin.h  crank_nicolson_integrator.h  data_array.h  data_layout.h  data_token.h  data_view.h  diffusive_flux.h  explicit_euler_integrator.h  exponential_wall_potential.h  external_potential.h  field.h  fixed_point_algorithm_mixin.h  flux.h  fourier_transform.h  free_energy_functional.h  functional.h  grand_potential.h  grid_interpolator.h  hard_wall_potential.h  harmonic_wall_potential.h  ideal_gas_functional.h  implicit_euler_integrator.h  integrator.h  iterative_algorithm_mixin.h  lennard_jones_93_wall_potential.h  linear_potential.h  mesh.h  pair_map.h  parallel.h  parallel_mesh.h  (+18 more)
python/: CMakeLists.txt
python/_flyft/: CMakeLists.txt  _flyft.cc  _flyft.h  composite_functional.cc  external_potential.cc  field.cc  hard_wall_potential.cc  ideal_gas_functional.cc  mesh.cc  rosenfeld_fmt.cc  state.cc
python/flyft/: CMakeLists.txt  __init__.py  dynamics.py  external.py  functional.py  mirror.py  mixins.py  parameter.py  solve.py  solver.py  state.py
python/flyft/_flyft/: _flyft.cc  _flyft.h  bmcsl_hard_sphere_functional.cc  boublik_hard_sphere_functional.cc  boundary_type.cc  brownian_diffusive_flux.cc  cartesian_mesh.cc  communicator.cc  composite_external_potential.cc  composite_flux.cc  composite_functional.cc  crank_nicolson_integrator.cc  diffusive_flux.cc  explicit_euler_integrator.cc  exponential_wall_potential.cc  external_potential.cc  field.cc  flux.cc  free_energy_functional.cc  functional.cc  grand_potential.cc  hard_wall_potential.cc  harmonic_wall_potential.cc  ideal_gas_functional.cc  implicit_euler_integrator.cc  integrator.cc  lennard_jones_93_wall_potential.cc  linear_potential.cc  mesh.cc  pair_map.cc  parallel_mesh.cc  parameter.cc  picard_iteration.cc  piccard_iteration.cc  rosenfeld_fmt.cc  rpy_diffusive_flux.cc  solver.cc  spherical_mesh.cc  state.cc  tracked_object.cc  (+7 more)
python/tests/: CMakeLists.txt  conftest.py  pytest-mpi.sh  test_bmcsl_hard_sphere.py  test_boublik_hard_sphere.py  test_brownian_diffusive_flux.py  test_composite_external_potential.py  test_composite_flux.py  test_composite_functional.py  test_crank_nicolson_integrator.py  test_explicit_euler_integrator.py  test_exponential_wall_potential.py  test_external_field.py  test_field.py  test_grand_potential.py  test_hard_wall_potential.py  test_harmonic_wall_potential.py  test_ideal_gas.py  test_implicit_euler_integrator.py  test_lennard_jones_93_wall_potential.py  test_linear_potential.py  test_mesh.py  test_mirror.py  test_parameter.py  test_picard_iteration.py  test_piccard_iteration.py  test_rosenfeld_fmt.py  test_rpy_diffusive_flux.py  test_state.py  test_virial_expansion.py  test_white_bear.py  test_white_bear_mark_ii.py
python/validate/: binary_mixture.py  brownian_diffusion.py  hard_sphere_evaporation.py  hard_sphere_slit.py  ideal_diffusion.py  stratification.py
src/: CMakeLists.txt  bmcsl_hard_sphere_functional.cc  boublik_hard_sphere_functional.cc  brownian_diffusive_flux.cc  cartesian_mesh.cc  communicator.cc  composite_external_potential.cc  composite_flux.cc  composite_functional.cc  crank_nicolson_integrator.cc  data_layout.cc  data_token.cc  data_view.cc  diffusive_flux.cc  explicit_euler_integrator.cc  exponential_wall_potential.cc  external_potential.cc  field.cc  flux.cc  fourier_transform.cc  free_energy_functional.cc  functional.cc  grand_potential.cc  grid_interpolator.cc  hard_wall_potential.cc  harmonic_wall_potential.cc  ideal_gas_functional.cc  implicit_euler_integrator.cc  integrator.cc  lennard_jones_93_wall_potential.cc  linear_potential.cc  mesh.cc  parallel_mesh.cc  picard_iteration.cc  piccard_iteration.cc  reciprocal_mesh.cc  rosenfeld_fmt.cc  rpy_diffusive_flux.cc  solver.cc  spherical_mesh.cc  (+8 more)
tests/: CMakeLists.txt  test_external_potential.cc  test_fourier_transform.cc  test_picard_iteration.cc  test_piccard_iteration.cc  test_program.cc  test_rosenfeld_fmt.cc
